--- a/src/app/common/product-details-modal/product-details-modal.css
+++ b/src/app/common/product-details-modal/product-details-modal.css
@@ -44,6 +44,11 @@
     user-select: none;
  }
 
+ .product-detail-main-container{
+   width: 100%;
+   height: 100%;
+ }
+
  .product-detail-container{
     height: 440px;
     width: 100%;
@@ -103,3 +108,40 @@
    justify-content: center;
    font-size: 10px;
 }
+
+
+@media (max-width: 1000px) {
+   .modal-body-container {
+     display: flex;
+     flex-direction: column;
+     height: auto;
+     width: 100%;
+     align-items: center;
+   }
+   .product-detail-container {
+     height: auto;
+     max-height:none;
+     overflow-y:hidden;
+   }
+   .product-price-container{
+     display: flex;
+     flex-direction: column;
+     gap: 5px;
+   }
+   .modal-image-container {
+      width: 100%;
+      height: 50%;
+      background-color: rgba(0, 0, 0, 0.055);
+    }
+}
+
+@media (max-width: 600px) {
+ .text-area-style label{
+     font-size: 10px;
+     font-family:Verdana, Geneva, Tahoma, sans-serif;
+ }
+ .text-area-style textarea{
+     font-size: 10px;
+     font-family:Verdana, Geneva, Tahoma, sans-serif;
+ }
+}  
