--- a/src/app/home/components/home-tab/home-tab.css
+++ b/src/app/home/components/home-tab/home-tab.css
@@ -37,55 +37,6 @@
   font-weight: bold;
 }
 
-/* START LEFT CONTAINER */
-.market-place-left-container {
-  width: 20%;
-  margin: 2px;
-  border-right-width: 1px;
-  border-right-color: black;
-  max-height: 100%;
-  overflow-y: auto;
-  flex-wrap: wrap;
-}
-
-.market-place-product-categories-container {
-  margin: 10px;
-  margin-top: 40px;
-  border-bottom-width: 1px;
-  padding-bottom: 20px;
-}
-
-.market-place-product-condition-container {
-  margin: 10px;
-  border-bottom-width: 1px;
-  padding-bottom: 20px;
-}
-
-.category-item-style {
-  color: black;
-  font-size: 18px;
-}
-
-.category-item-style:hover {
-  color: black;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.category-selected-style {
-  color: black;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.category-selected-style:hover {
-  color: black;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-/* END LEFT CONTAINER */
-
 /* START CENTER CONTAINER */
 .market-place-center-container {
   width: 100%;
@@ -191,3 +142,29 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 12px;
 }
+
+
+@media (max-width: 600px) {
+  .title-category-style {
+    font-size: 10px;
+  }
+  .title-category-selected-style {
+    font-size: 10px;
+  }
+  .title-container-2-link {
+    gap: 20px;
+    margin: 10px;
+  }
+}  
+
+@media (max-width: 500px) {
+  .title-category-style {
+    font-size: 10px;
+  }
+  .title-category-selected-style {
+    font-size: 10px;
+  }
+  .title-container-2-link {
+    gap: 10px;
+  }
+} 
