--- a/src/app/home/components/profile-tab/profile-tab.css
+++ b/src/app/home/components/profile-tab/profile-tab.css
@@ -21,6 +21,14 @@
   cursor: move;
 }
 
+.main-profile-button-container {
+  display: flex;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  gap: 5px;
+}
+
 .main-profile-image-details-container {
   display: flex;
   align-items: center;
@@ -28,7 +36,7 @@
   gap: 10px;
 }
 
-.main-profile-image-container {
+.main-profile-image {
   height: 170px;
   width: 170px;
 }
@@ -72,11 +80,10 @@
 
 .add-new-listing-container {
   display: flex;
-  width: 40%;
+  width: 50%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 5%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 12px;
   color: black;
@@ -93,4 +100,58 @@
   height: 400px;
   background-color: green;
   width: 100%;
+}
+
+@media (max-width: 1000px) {
+  .main-profile-container {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+
+@media (max-width: 800px) {
+  .main-profile-container-cover-image-name {
+    height: 250px;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-profile-container-cover-image-name {
+    height: 200px;
+  }
+  .main-profile-name-container {
+    font-size: 25px;
+  }
+  .main-profile-membership {
+    font-size: 10px;
+  }
+  .main-profile-image {
+    height: 140px;
+    width: 140px;
+  }
+  .add-new-listing-container {
+    width: 80%;
+    padding: 20px;
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 430px) {
+  .main-profile-image-details-container {
+    margin-top: -30px;
+  }
+
+  .main-profile-container-cover-image-name {
+    height: 200px;
+  }
+  .main-profile-name-container {
+    font-size: 20px;
+  }
+  .main-profile-membership {
+    font-size: 10px;
+  }
+  .main-profile-image {
+    height: 100px;
+    width: 100px;
+  }
 }
