--- a/src/app/common/product-details-modal/product-details-modal.css
+++ b/src/app/common/product-details-modal/product-details-modal.css
@@ -11,22 +11,7 @@
     height: 440px;
     background-color: rgba(0, 0, 0, 0.055);
  }
-
  
- .carousel-content-container{
-    height:440px ;
-    line-height: 160px;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.137);
- }
-
- 
- .modal-image-container{
-    width: 50%;
-    height: 440px;
-    background-color: rgba(0, 0, 0, 0.055);
- }
-
  .carousel-content-container{
     height:440px ;
     line-height: 160px;
@@ -57,6 +42,15 @@
     max-height: 440px;
     overflow-y: auto;
     gap: 5px;
+ }
+
+ .image-details {
+   height: 100%;
+   width: 100%;
+   display: grid;
+   color: black;
+   padding-right: 15px;
+   white-space: pre-wrap;
  }
  
 .image-price{
@@ -95,7 +89,7 @@
 .product-details-reaction-container{
    height: 30px;
    width: 100%;
-   margin-top: -30px;
+   margin-top: -25px;
    display: flex;
    align-items: center;
    gap: 10px;
@@ -127,13 +121,31 @@
      display: flex;
      flex-direction: column;
      gap: 5px;
-   }
-   .modal-image-container {
-      width: 100%;
-      height: 50%;
-      background-color: rgba(0, 0, 0, 0.055);
-    }
+   }  
 }
+
+
+@media (max-width: 800px) {
+   .product-detail-container label{
+     font-size: 12px;
+    }
+    .image-category {
+      font-size: 12px;
+    }
+    .image-price {
+      font-size: 12px;
+    }
+    .image-price-discounted {
+      font-size: 12px;
+    }
+    .image-price-discount {
+      font-size: 12px;
+    }
+    .image-description {
+      font-size: 10px;
+    }
+ }
+ 
 
 @media (max-width: 600px) {
  .text-area-style label{
@@ -144,4 +156,15 @@
      font-size: 10px;
      font-family:Verdana, Geneva, Tahoma, sans-serif;
  }
+.product-details-reaction-container{
+   margin-top: -10px;
+}
+.modal-image-container{
+   width: 400px !important;
+   height: 200px  !important;
+}
+.carousel-content-container{
+   height:200px  !important;
+}
 }  
+
