--- a/src/app/home/components/home-tab/home-tab.css
+++ b/src/app/home/components/home-tab/home-tab.css
@@ -8,11 +8,10 @@
 }
 
 .title-container-2-link {
-  gap: 30px;
   display: flex;
-  margin: 10px;
   justify-content: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100%;
+  gap: 10px;
 }
 
 .title-category-style {
@@ -143,7 +142,6 @@
   font-size: 12px;
 }
 
-
 @media (max-width: 600px) {
   .title-category-style {
     font-size: 10px;
@@ -151,20 +149,21 @@
   .title-category-selected-style {
     font-size: 10px;
   }
-  .title-container-2-link {
-    gap: 20px;
-    margin: 10px;
-  }
-}  
+}
 
-@media (max-width: 500px) {
-  .title-category-style {
-    font-size: 10px;
-  }
-  .title-category-selected-style {
-    font-size: 10px;
-  }
+/* Responsive media query */
+@media (max-width: 400px) {
   .title-container-2-link {
-    gap: 10px;
+    overflow-x: scroll;
+    justify-self: center;
+    align-items: center;
+    width: 1000px;
+    max-width: 350px;
+    gap: 5px;
   }
-} 
+
+  .title-category-style,
+  .title-category-selected-style {
+    white-space: nowrap; 
+  }
+}
