--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -68,6 +68,9 @@
   }
 
   @media (max-width: 700px) {
+    .header-container {
+     padding-left: 5px;
+    padding-right: 5px;}
     .header-icon-container {
       display: none;
     }
