--- a/src/app/profile/profile-tab.css
+++ b/src/app/profile/profile-tab.css
@@ -1,5 +1,6 @@
 .main-profile-container {
-  width: 100%;
+   width: 100vw;
+   height: 100vh;
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 5px;
