--- a/src/app/home/components/home-tab/home-tab.css
+++ b/src/app/home/components/home-tab/home-tab.css
@@ -143,6 +143,29 @@
   font-size: 12px;
 }
 
+.load-more-container-style {
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 9px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  cursor: pointer;
+  transition: transform 0.3s ease; /* Smooth transition for scaling and glow */
+}
+
+.load-more-container-style:hover {
+  transform: scale(1.08); /* Scale up the element by 10% */
+}
+
+.load-more-label {
+  color: rgba(0, 0, 0, 0.432);
+  background-color: rgba(172, 172, 172, 0.397);
+  padding: 2px;
+  border-radius: 2px;
+}
+
 @media (max-width: 600px) {
   .title-category-style {
     font-size: 10px;
