--- a/src/app/favorites/favorites.css
+++ b/src/app/favorites/favorites.css
@@ -1,13 +1,14 @@
-.main-background {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: start;
 
-  background-color: white;
-  overflow-y: hidden;
-  overflow-x: hidden;
+.main-background {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items:start;
+    
+    background-color: white;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .main-profile-container {
@@ -20,90 +21,88 @@
   overflow-x: hidden;
 }
 
+
 .header-container {
-  display: flex;
-  height: 4vh;
-  width: 100vw;
-  align-items: center;
-  padding: 20px;
-  background-color: white;
-  border-bottom-width: 1px;
-  border-bottom-color: rgba(0, 0, 0, 0.068);
+    display: flex;
+    height: 4vh;
+    width: 100vw;
+    align-items: center;
+    padding: 20px;
+    background-color: white;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(0, 0, 0, 0.068);
 }
 
 .header-menu-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100vw;
-}
-
-.header-icon-container {
-  display: flex;
-  margin-top: 5px;
-  gap: 15px;
-}
-
-.header-icon {
-  color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 12px;
-  cursor: pointer;
-  margin: auto;
-}
-
-.header-icon:hover {
-  color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.body-container {
-  height: 91.6vh;
-  width: 100vw;
-  margin-top: 10px;
-  display: flex;
-  justify-content: space-around;
-}
-
-.account-container {
-  display: flex;
-  align-items: center;
-}
-
-.menu-icon-container {
-  display: none;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.7
-  ); /* Semi-transparent white overlay */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999; /* Make sure it's above other elements */
-}
-
-@media (max-width: 700px) {
-  .header-container {
-    padding-left: 5px;
-    padding-right: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
   }
-  .header-icon-container {
+  
+
+  .header-icon-container{
+    display: flex;
+    margin-top: 5px;
+    gap: 15px;
+   
+  }
+  
+  .header-icon{
+    color: black;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    cursor: pointer;
+    margin:auto;
+  }
+
+  .header-icon:hover{
+    color: black;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    font-weight:bold ;
+    cursor: pointer;
+  }
+
+  .body-container{
+    height:91.6vh;
+    width: 100vw;
+    margin-top: 10px;
+    display: flex;
+    justify-content:space-around;
+  }
+
+  .account-container{
+    display:flex;
+    align-items: center;
+  }
+
+  .menu-icon-container{
     display: none;
   }
-  .menu-icon-container {
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent white overlay */
     display: flex;
-  }
+    align-items: center;
+    justify-content: center;
+    z-index: 999; /* Make sure it's above other elements */
 }
+
+  @media (max-width: 700px) {
+    .header-container {
+     padding-left: 5px;
+    padding-right: 5px;}
+    .header-icon-container {
+      display: none;
+    }
+    .menu-icon-container{
+      display: flex;
+    }
+  }
+  
