--- a/src/app/login/components/forgot-password/forgot-password-style.css
+++ b/src/app/login/components/forgot-password/forgot-password-style.css
@@ -23,3 +23,23 @@
     width: 100%;
     justify-content: space-between;
 }
+
+
+@media (max-width: 1500px) {
+    .forgot-pass-main-container {
+      width: 50%;
+    }
+  }
+  
+  @media (max-width: 1000px) {
+    .forgot-pass-main-container {
+      width: 70%;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .forgot-pass-main-container {
+      width: 80%;
+    }
+  }
+  
