--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -1,114 +1,145 @@
-
 .main-background-login {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    margin-top: -3%;
-    align-items: center;
-    justify-content: center;
-    background-color: #FBF9FA;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  margin-top: -3%;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
 }
 
 .flex-center-gap {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  }
-  
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
 
 .centered-bold-text {
-    display: grid;
-    justify-items: center;
-    color: black;
-    font-size: 150px;
-    margin-bottom:-50px;
-    font-weight: bolder;
+  display: grid;
+  justify-items: center;
+  color: black;
+  font-size: 150px;
+  margin-bottom: -50px;
+  font-weight: bolder;
 }
 
 .marketplace-text {
-    display: grid;
-    justify-items: center;
-    color: black;
-    letter-spacing: 20px;
-    background-color:#FBF9FA;
-    font-weight: bold;
+  display: grid;
+  justify-items: center;
+  color: black;
+  letter-spacing: 20px;
+  background-color: white;
+  font-weight: bold;
 }
-  
+
 .vertical-line {
-    height: 450px;
-    width: 1px;
-    background-color: black;
-    margin-top: 50px;
-  }
-  
+  height: 450px;
+  width: 1px;
+  background-color: black;
+  margin-top: 50px;
+}
 
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent white overlay */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 999; /* Make sure it's above other elements */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.7
+  ); /* Semi-transparent white overlay */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999; /* Make sure it's above other elements */
 }
 
 .unclickable {
-    pointer-events: none; /* Prevent clicks on the main container */
+  pointer-events: none; /* Prevent clicks on the main container */
 }
 
-.sign-up-container{
-    display:flex;
-    padding-top: 10px;
-    margin-bottom: -15px;
-    border-top-width: 3px;
-    border-top-color: black;
-    justify-content: space-between;
-    
+.sign-up-container {
+  display: flex;
+  padding-top: 10px;
+  margin-bottom: -15px;
+  border-top-width: 3px;
+  border-top-color: black;
+  justify-content: space-between;
 }
 
-.forgot-password-container{
-    display:flex;
-    width: 100%;
-    margin-top: -15px;
-    justify-content: space-between;
-    margin-bottom: -15px;
+.forgot-password-container {
+  display: flex;
+  width: 100%;
+  margin-top: -15px;
+  justify-content: space-between;
+  margin-bottom: -15px;
 }
 
-.login-form-container{
-    width: 450px;
-    height: 300px;
-    padding: 20px;
+.login-form-container {
+  width: 450px;
+  height: 300px;
+  padding: 20px;
 }
 
-.login-fields-container{
-    gap: 1rem;
-    width: 100%;
-    padding: 25px;
-    border-radius: 2%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+.login-fields-container {
+  gap: 1rem;
+  width: 100%;
+  padding: 25px;
+  border-radius: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-
-.link-button-container{
-    width: 100%;
-    display: flex;
-    margin-top: 10px;
-    justify-content: space-between;
+.link-button-container {
+  width: 100%;
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
 }
 
-.login-button-container{
-    width: 100%;
-    margin-top: -10px;
+.login-button-container {
+  width: 100%;
+  margin-top: -10px;
 }
 
 .ant-spin-lg .ant-spin-dot-item {
-    background-color: black; 
+  background-color: black;
+}
+
+@media (max-width: 900px) {
+  .flex-center-gap {
+    display: grid;
   }
-  
+  .vertical-line {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .login-form-container {
+    width: 400px;
+    height: 300px;
+  }
+  .centered-bold-text {
+    margin-left: 10px;
+    font-size: 100px;
+    margin-bottom: -30px;
+  }
+  .marketplace-text {
+    font-size: 15px;
+    letter-spacing: 10px;
+  }
+}
+
+@media (max-width: 400px) {
+  .login-form-container {
+    width: 350px;
+    height: 300px;
+  }
+}
